added new features as well as fixes for User, Cargo classes